--- a/.github/workflows/checkov_scan.yml
+++ b/.github/workflows/checkov_scan.yml
@@ -1,20 +1,38 @@
-# This is a basic workflow to help you get started with Actions
-
-name: checkov_scan
-
-# Controls when the workflow will run
+name: Terraform Security Scan with Checkov
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  call_checkov:
-    uses: anujtoppoMS/aks-microservices/aks-microservices/ci/checkov.yml
+  checkov-scan:
+    name: Run Checkov on Terraform
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install Checkov
+        run: pip install checkov
+
+      - name: Run Checkov scan
+        run: checkov -d . --framework terraform --output cli
+        
+      - name: Save Checkov report
+        if: always()
+        run: checkov -d . --framework terraform --output json > checkov_report.json
+
+      - name: Upload Checkov report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: checkov-report
+          path: checkov_report.json
