--- a/.github/workflows/deploy_apps.yml
+++ b/.github/workflows/deploy_apps.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Azure Login via OIDC
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AKS_CLIENT_ID }}
+          client-id: ${{ secrets.ACRAKS_CLIENTID }}
           tenant-id: ${{ secrets.TENANT_ID }}
           subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
 
