--- a/.github/workflows/deploy_apps.yml
+++ b/.github/workflows/deploy_apps.yml
@@ -37,5 +37,5 @@ jobs:
         working-directory: ./aks-microservices/app/
         run: |
             helm install user-service ./helm/user-service
-            helm install order-service ./helm/order-service
-            helm install gateway ./helm/gateway
+        # helm install order-service ./helm/order-service
+        # helm install gateway ./helm/gateway
