--- a/aks-microservices/app/helm/user-service/templates/service.yaml
+++ b/aks-microservices/app/helm/user-service/templates/service.yaml
@@ -1,13 +1,15 @@
+apiVersion: v1
+kind: Service
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ include "user-service.fullname" . }}
   labels:
-    app: {{ .Chart.Name }}
+    {{- include "user-service.labels" . | nindent 4 }}
 spec:
-  template:
-    metadata:
-      labels:
-        app: {{ .Chart.Name }}
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "{{ .Values.service.port }}"
-        prometheus.io/path: "/metrics"
+  type: {{ .Values.service.type }}
+  ports:
+    - port: {{ .Values.service.port }}
+      targetPort: http
+      protocol: TCP
+      name: http
+  selector:
+    {{- include "user-service.selectorLabels" . | nindent 4 }}
