--- a/aks-microservices/app/helm/user-service/templates/service.yaml
+++ b/aks-microservices/app/helm/user-service/templates/service.yaml
@@ -1,15 +1,13 @@
-apiVersion: v1
-kind: Service
 metadata:
-  name: {{ include "user-service.fullname" . }}
+  name: {{ .Chart.Name }}
   labels:
-    {{- include "user-service.labels" . | nindent 4 }}
+    app: {{ .Chart.Name }}
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
-  selector:
-    {{- include "user-service.selectorLabels" . | nindent 4 }}
+  template:
+    metadata:
+      labels:
+        app: {{ .Chart.Name }}
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "{{ .Values.service.port }}"
+        prometheus.io/path: "/metrics"
