--- a/aks-microservices/app/helm/user-service/Chart.yaml
+++ b/aks-microservices/app/helm/user-service/Chart.yaml
@@ -1,3 +1,5 @@
 apiVersion: v2
-name: order-service
+name: user-service
+description: A Helm chart for the User Service
 version: 0.1.0
+appVersion: "1.0.0"
