--- a/aks-microservices/app/helm/gateway/templates/deployment.yaml
+++ b/aks-microservices/app/helm/gateway/templates/deployment.yaml
@@ -9,6 +9,9 @@ spec:
   selector:
     matchLabels:
       app: {{ .Chart.Name }}
+  tolerations:
+  - key: {{ .Values.tolerations.key }}
+    operator: {{ .Values.tolerations.operator }}
   template:
     metadata:
       labels:
