--- a/aks-microservices/app/helm/user-service/values.yaml
+++ b/aks-microservices/app/helm/user-service/values.yaml
@@ -1,6 +1,9 @@
 replicaCount: 1
+tolerations:
+  - key: "CriticalAddonsOnly"
+    operator: "Exists"
 image:
   repository: platformacr001.azurecr.io/app-user-service
   tag: v1
 service:
-  port: 8000
+  port: 8001
