updated the helm toleration

--- a/aks-microservices/app/helm/gateway/templates/deployment.yaml
+++ b/aks-microservices/app/helm/gateway/templates/deployment.yaml
@@ -10,8 +10,11 @@ spec:
     matchLabels:
       app: {{ .Chart.Name }}
   tolerations:
-  - key: {{ .Values.tolerations.key }}
-    operator: {{ .Values.tolerations.operator }}
+{{- range .Values.tolerations }}
+    - key: {{ .key | quote }}
+      operator: {{ .operator | quote }}
+      value: {{ .value | quote }}
+{{- end }}
   template:
     metadata:
       labels:
