--- a/aks-microservices/app/helm/gateway/templates/deployment.yaml
+++ b/aks-microservices/app/helm/gateway/templates/deployment.yaml
@@ -9,12 +9,6 @@ spec:
   selector:
     matchLabels:
       app: {{ .Chart.Name }}
-  tolerations:
-{{- range .Values.tolerations }}
-    - key: {{ .key | quote }}
-      operator: {{ .operator | quote }}
-      value: {{ .value | quote }}
-{{- end }}
   template:
     metadata:
       labels:
@@ -29,3 +23,15 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
             - containerPort: {{ .Values.service.port }}
+      tolerations:
+{{- range .Values.tolerations }}
+        - key: {{ .key | quote }}
+          operator: {{ .operator | quote }}
+{{- if .value }}
+          value: {{ .value | quote }}
+{{- end }}
+{{- if .effect }}
+          effect: {{ .effect | quote }}
+{{- end }}
+{{- end }}
+
