removed on push trigger for the terraform workflow

--- a/.github/workflows/terraform_cluster_provision.yml
+++ b/.github/workflows/terraform_cluster_provision.yml
@@ -2,11 +2,11 @@ name: Terraform CI/CD
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
-      - staging
-      - dev
+#   push:
+#     branches:
+#       - main
+#       - staging
+#       - dev
 
 jobs:
   validate:
