updated workspaces for the terraform

--- a/.github/workflows/terraform_cluster_provision.yml
+++ b/.github/workflows/terraform_cluster_provision.yml
@@ -45,6 +45,7 @@ jobs:
 
       - name: Terraform Plan
         run: terraform plan -out=tfplan
+        working-directory: ./aks-microservices/terraform/envs/prod
 
       - name: Upload Plan Artifact
         uses: actions/upload-artifact@v4
