--- a/.github/workflows/monit_ingress_setup.yml
+++ b/.github/workflows/monit_ingress_setup.yml
@@ -65,6 +65,21 @@ jobs:
           helm install monitoring prometheus-community/kube-prometheus-stack -n monitoring
         fi
 
+    - name: Ensure NGINX Ingress Controller
+      run: |
+          NAMESPACE="ingress-nginx"
+          RELEASE="ingress-nginx"
+
+          if helm status $RELEASE -n $NAMESPACE >/dev/null 2>&1; then
+            echo "✅ NGINX Ingress Controller already installed in namespace '$NAMESPACE'."
+          else
+            echo "⚙️ Installing NGINX Ingress Controller..."
+            kubectl create namespace $NAMESPACE --dry-run=client -o yaml | kubectl apply -f -
+            helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+            helm repo update
+            helm install $RELEASE ingress-nginx/ingress-nginx -n $NAMESPACE
+          fi
+
     - name: Rollback on failure
       if: failure()
       run: |
