--- a/aks-microservices/app/helm/order-service/templates/service.yaml
+++ b/aks-microservices/app/helm/order-service/templates/service.yaml
@@ -14,4 +14,4 @@ spec:
   ports:
     - name: http
       port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
