--- a/.github/workflows/checkov_scan.yml
+++ b/.github/workflows/checkov_scan.yml
@@ -24,7 +24,7 @@ jobs:
         run: pip install checkov
 
       - name: Run Checkov scan
-        run: checkov -d . --framework terraform --output json --download-external-modules true cli
+        run: checkov -d . --framework terraform --output json --download-external-modules true
 
       - name: Save Checkov report
         if: always()
