--- a/aks-microservices/app/helm/order-service/templates/deployment.yaml
+++ b/aks-microservices/app/helm/order-service/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
-            - containerPort: {{ .Values.service.port }}
+            - containerPort: {{ .Values.service.targetPort }}
       tolerations:
 {{- range .Values.tolerations }}
         - key: {{ .key | quote }}
