--- a/.github/workflows/checkov_scan.yml
+++ b/.github/workflows/checkov_scan.yml
@@ -24,12 +24,11 @@ jobs:
         run: pip install checkov
 
       - name: Run Checkov scan
-        working-directory: ./aks-microservices/terraform/envs/prod
-        run: checkov -d . --framework terraform --output json --download-external-modules false
+        run: checkov -d terraform/envs/prod --framework terraform --output json --download-external-modules false
 
       - name: Save Checkov report
         if: always()
-        run: checkov -d . --framework terraform --output json --download-external-modules false > checkov_report.json
+        run: checkov -d terraform/envs/prod --framework terraform --output json --download-external-modules false > checkov_report.json
 
       - name: Upload Checkov report
         if: always()
