--- a/.github/workflows/checkov_scan.yml
+++ b/.github/workflows/checkov_scan.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install Checkov
         run: pip install checkov
 
+      - name: Debug workspace structure
+        run: ls -R $GITHUB_WORKSPACE
+
       - name: Run Checkov scan
         run: checkov -d $GITHUB_WORKSPACE/terraform/envs/prod --framework terraform --output json --download-external-modules false
 
