--- a/aks-microservices/app/menifests/ingress.yaml
+++ b/aks-microservices/app/menifests/ingress.yaml
@@ -4,7 +4,9 @@ metadata:
   name: microsvc-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    # kubernetes.io/ingress.class: "nginx"
 spec:
+  ingressClassName: nginx
   rules:
   - host: 
     http:
