--- a/.github/workflows/monit_ingress_setup.yml
+++ b/.github/workflows/monit_ingress_setup.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   setup-monitoring:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write   # required for OIDC
+      contents: read
 
     steps:
     - name: Checkout repo
