updated the envs templating

--- a/aks-microservices/app/menifests/secretproviderclass.tpl.yaml
+++ b/aks-microservices/app/menifests/secretproviderclass.tpl.yaml
@@ -8,11 +8,11 @@ spec:
   parameters:
     useVMManagedIdentity: "true"
     # Option A: supply the user-assigned managed identity client id
-    userAssignedIdentityID: "'${UAMI_CLIENT_ID}'"
+    userAssignedIdentityID: \""${UAMI_CLIENT_ID}"\"
     # Option B: alternatively supply the full resource id (uncomment if you prefer)
     # userAssignedIdentityID: "/subscriptions/<sub>/resourceGroups/<rg>/providers/Microsoft.ManagedIdentity/userAssignedIdentities/<uami-name>"
     keyvaultName: "peerisland-asses-kv"
-    tenantId: "'${AZURE_TENANT_ID}'"
+    tenantId: \""${AZURE_TENANT_ID}"\"
     objects: |
       array:
         - |
