--- a/aks-microservices/app/menifests/ingress.yaml
+++ b/aks-microservices/app/menifests/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: microsvc-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/health-check-path: /healthz
     # kubernetes.io/ingress.class: "nginx"
 spec:
   ingressClassName: nginx
