--- a/aks-microservices/app/menifests/ingress.yaml
+++ b/aks-microservices/app/menifests/ingress.yaml
@@ -3,14 +3,13 @@ kind: Ingress
 metadata:
   name: microsvc-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    # nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/health-check-path: /healthz
     # kubernetes.io/ingress.class: "nginx"
 spec:
   ingressClassName: nginx
   rules:
-  - host: 
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
